--- a/src/public/css/produit/list.css
+++ b/src/public/css/produit/list.css
@@ -1,15 +1,41 @@
 main{
-    width: 100%;
-    min-height: calc(100vh - 200px);
+    width: calc(100% - 200px);
+    min-height: calc(100vh - 400px);
+    padding: 100px;
+
     display: grid;
     grid-column: 4;
+    grid-template-columns: 200px 1fr 1fr 1fr;
+    grid-column-gap: 100px;
 }
 
 .produit{
-    width: 200px;
-    height: 300px;
+    width: calc(200px - 20px);
+    height: calc(300px - 20px);
+    padding: 20px;
     background-color: #fff;
     border-radius: 4px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    transition: 0.25s;
+}
+
+.produit:hover{
+    transform: scale(1.1);
+    box-shadow: 1px 1px 12px #555;
+}
+
+.produit:hover .imageProduit img{
+    transform: scale(1.2);
+}
+
+.produit a{
+    margin-top: 20px;
+    text-decoration: none;
+    font-size: 20px;
 }
 
 .imageProduit{
@@ -21,5 +47,7 @@ main{
 .imageProduit img{
     width: 100%;
     height: 200px;
+    transition: 0.25s;
 }
+
 
