--- a/src/public/css/produit/list.css
+++ b/src/public/css/produit/list.css
@@ -1,16 +1,16 @@
 main{
-    width: calc(100% - 200px);
+    width: calc(1100px);
     min-height: calc(100vh - 400px);
     padding: 100px;
 
     display: grid;
-    grid-column: 4;
-    grid-template-columns: 200px 1fr 1fr 1fr;
+    grid-template-columns: 200px 200px 200px 200px;
     grid-column-gap: 100px;
+    grid-row-gap: 40px;
 }
 
 .produit{
-    width: calc(200px - 20px);
+    width: calc(200px - 40px);
     height: calc(300px - 20px);
     padding: 20px;
     background-color: #fff;
