--- a/src/public/css/produitsPanier/produitsPanier.css
+++ b/src/public/css/produitsPanier/produitsPanier.css
@@ -25,7 +25,7 @@ a{
 
 .produitsPanier{
     display: block;
-    width: 100%;
+    width: 90%;
     margin: auto;
     height: 100px;
     display: flex;
@@ -34,7 +34,6 @@ a{
     align-items: center;
     text-decoration: none;
     border-bottom: 1px solid rgb(124, 123, 123);
-    padding: 0px 0%;
     background-color: #fff;
 }
 
@@ -73,6 +72,45 @@ a{
     color: #fff;
     border-radius: 5px;
     margin: 0px 20px;
+}
+
+.total{
+    width: 100%;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #3399ff;
+    margin: 50px auto 0px auto;
+}
+
+.total p{
+    color: #fff;
+    font-weight: bold;
+}
+
+.total p:last-of-type{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+    color: #3399ff;
+    background-color: #fff;
+    font-weight: bold;
+}
+
+.total a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: #fff;
+    color:#3399ff;
+    font-weight: bold;
 }
 
 @media (max-width: 800px) { 
