--- a/src/public/css/utilisateur/inscription.css
+++ b/src/public/css/utilisateur/inscription.css
@@ -54,6 +54,7 @@ form input{
     padding: 10px 20px;
     width: calc(100% - 40px);
     font-size: 15px;
+    margin-top: 10px;
 }
 
 form input[type=submit]{
