--- a/src/public/css/produit/detail.css
+++ b/src/public/css/produit/detail.css
@@ -66,7 +66,6 @@ font-size: 48px;
 }
 
 .avis{
-	margin-top: 10%;
 	padding: 2%;
 }
 
@@ -88,11 +87,16 @@ font-size: 48px;
 }
 
 .contenu {
-	background-color: lightgray;
+	background-color: #e5e5e5;
 	border: solid;
-	border-color: gray;
+	border-color: black;
 	border-radius: 10px;
-	
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.contenu:first-child {
+	padding: 10px;
 }
 
 
