--- a/src/public/css/contenuPanier/produitsPanier.css
+++ b/src/public/css/contenuPanier/produitsPanier.css
@@ -4,7 +4,7 @@
 
 }
 
-h1{
+main h1{
     text-align: center;
     margin: 50px auto;
 }
@@ -83,6 +83,8 @@ a{
     align-items: center;
     background-color: #3399ff;
     margin: 50px auto 0px auto;
+    position: absolute;
+    bottom: 100px;
 }
 
 .total p{
