--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -12,16 +12,17 @@ html{
 }
 
 header{
-    width: calc(100% - 200px);
-    height: 100px;
-    padding: 0 100px;
-
-    background-color: var(--main-color);
-
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
+    align-items:center;
+    width: 90%;
+    height: 100px;
+    padding: 0 5%;
+
+    background-color: var(--main-color);
+
+    
 }
 
 header h1{
@@ -38,8 +39,11 @@ header nav ul li a{
 }
 
 footer{
+    position: absolute;
+    bottom: 0;
     width: 100%;
     height: 100px;
+    
 
     background-color: var(--text-color);
 }
