fin du panier + quelques styles css

--- a/src/public/css/contenuPanier/valider.css
+++ b/src/public/css/contenuPanier/valider.css
@@ -15,6 +15,8 @@ main{
     justify-content: center;
     align-items: center;
     text-align: center;
+    min-height: calc(100vh - 250px);
+    position: relative;
 }
 
 h1{
