--- a/src/public/css/contenuPanier/produitsPanier.css
+++ b/src/public/css/contenuPanier/produitsPanier.css
@@ -4,6 +4,12 @@
 
 }
 
+main{
+    min-height: calc(100vh - 250px);
+    position: relative;
+}
+
+
 main h1{
     text-align: center;
     margin: 50px auto;
@@ -12,7 +18,6 @@ main h1{
 a{
     text-decoration: none;
 }
-
 .nomProduit{
     display: block;
     width: 200px;
@@ -75,16 +80,17 @@ a{
 }
 
 .total{
-    width: 100%;
-    height: 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
     background-color: #3399ff;
-    margin: 50px auto 0px auto;
+    margin-top: 50px;
     position: absolute;
-    bottom: 100px;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    
 }
 
 .total p{
@@ -112,6 +118,31 @@ a{
     border-radius: 50px;
     background-color: #fff;
     color:#3399ff;
+    font-weight: bold;
+}
+
+.vide{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.vide p {
+    color: #3399ff;
+}
+
+.vide a{
+    margin-top: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
+    height: 50px;
+    border-radius: 50px;
+    background-color: #3399ff;
+    color: #fff;
     font-weight: bold;
 }
 
