--- a/src/public/css/produit/create.css
+++ b/src/public/css/produit/create.css
@@ -6,6 +6,7 @@
 main{
     width: 100%;
     margin: 50px auto;
+    min-height: calc(100vh - 300px);
     display: flex;
     flex-direction: column;
     align-items: center;
